Fix SquireUI on mobile

--- a/dev/Styles/SquireUI.less
+++ b/dev/Styles/SquireUI.less
@@ -36,17 +36,17 @@
 .squire-toolgroup select[data-action="fontSize"] {
 	width: 4em !important;
 }
-.squire-toolgroup select[data-action="bold"] {
+.squire-toolgroup button[data-action="bold"] {
 	font-weight: bold;
 }
-.squire-toolgroup select[data-action="italic"] {
+.squire-toolgroup button[data-action="italic"] {
 	font-style: italic;
 }
 /*
-.squire-toolgroup select[data-action="underline"] {
+.squire-toolgroup button[data-action="underline"] {
 	text-decoration: underline;
 }
-.squire-toolgroup select[data-action="strikethrough"] {
+.squire-toolgroup button[data-action="strikethrough"] {
 	text-decoration: line-through;
 }
 */
